# actix-drop

./: .gitignore  Cargo.toml  README.md
assets/: style.css
config/: config.yaml.example
libsoyjot/: Cargo.toml
libsoyjot/src/: config.rs
libsoyjot/src/store/: data.rs  mod.rs
soyjot/: Cargo.toml
soyjot-actix/: Cargo.toml
soyjot-actix/src/: http_resp.rs  http_server.rs  main.rs
soyjot-axum/: Cargo.toml
soyjot/src/: lib.rs
soyjot/src/store/: mod.rs  persist_async.rs
src/: config.rs  data.rs  html.rs  http_server.rs  lib.rs  main.rs  persist.rs  resp.rs  store.rs
src/hash_trie/: trie.rs
src/resp/: html.rs  mod.rs
src/store/: clipboard.rs  data.rs  error.rs  mod.rs  persist.rs  tracker.rs  trie_tracker.rs
src/store/hash_trie/: mod.rs  trie.rs
