[package]
name = "actix-drop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
soytrie = { git = "https://github.com/soyart/soytrie", branch = "main" }
actix-web = { git = "https://github.com/actix/actix-web.git", branch = "master" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
lazy_static = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
config = ">=0.13"
colored = "2"
