[package]
name = "libsoyjot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "^1", features = ["macros", "rt-multi-thread"] }
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
config = ">=0.13"
colored = "2"
