[package]
name = "soyjot-actix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libsoyjot = { path = "../libsoyjot" }

actix-web = { version = ">=4" }
actix-router = { version = ">=0.5" }
colored = "2"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
