[package]
name = "soyjot-actix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
soyjot = { path = "../soyjot" }
actix-web = { version = "^4" }

tokio = { workspace = true }
colored = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
sha2 = { workspace = true }
